refactor: Update DestinationSection, SearchSection, ServicesSection and WelcomeMessage to use HeadingSection component

--- a/app/components/CreateTripButton/CreateTripButton.module.css
+++ b/app/components/CreateTripButton/CreateTripButton.module.css
@@ -6,6 +6,6 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    margin-top: 30px;
+    margin: 0px 500px 100px 500px;
   }
   
