--- a/app/components/ChatBox/ChatBox.module.css
+++ b/app/components/ChatBox/ChatBox.module.css
@@ -8,18 +8,23 @@
   .sidebar {
     width: 250px;
     background-color: #f4f4f4;
-    border-right: 1px solid #ddd;
+    color: #3a3d41;
     padding: 10px;
   }
   
   .newChatButton {
-    width: 100%;
     padding: 10px;
-    background-color: #007bff;
-    color: white;
-    border: none;
+    width: 100%;
     cursor: pointer;
+    background-color: #eee;
+    border: 1px solid #eee;
+    border-radius: 10px;
     margin-bottom: 10px;
+  }
+
+  .newChatButton:hover {
+    background-color: #ddd;
+    border: 1px solid #ddd;
   }
   
   .chatList {
@@ -30,7 +35,10 @@
   .chatItem {
     padding: 10px;
     cursor: pointer;
-    border-bottom: 1px solid #ddd;
+    background-color: #eee;
+    border: 1px solid #eee;
+    border-radius: 10px;
+    margin-bottom: 10px;
   }
   
   .chatItem:hover {
@@ -38,30 +46,34 @@
   }
   
   .activeChat {
-    background-color: #007bff;
+    background-color: #aaa;
     color: white;
   }
   
   .chatBox {
-    flex: 1;
+    flex-grow: 1;
+    background-color: #fff;
+    padding: 20px;
     display: flex;
     flex-direction: column;
   }
   
   .messages {
-    flex: 1;
-    padding: 10px;
+    flex-grow: 1;
     overflow-y: auto;
+    margin-bottom: 20px;
   }
   
   .message {
-    display: flex;
-    align-items: center;
+    width: 70%;
+    padding: 10px;
     margin-bottom: 10px;
+    border-radius: 10px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
   }
   
   .userMessage {
-    background-color: #dcf8c6;
+    background-color: #d1e7dd;
     align-self: flex-end;
     padding: 10px;
     border-radius: 10px;
@@ -97,13 +109,14 @@
   }
   
   .buttonStyle {
-    padding: 10px;
-    background-color: #007bff;
-    color: white;
+    padding: 10px 15px;
+    margin-left: 10px;
     border: none;
+    background-color: #ccc;
+    color: #fff;
+    border-radius: 5px;
     cursor: pointer;
-    border-radius: 4px;
-    margin-right: 10px;
+    font-size: 1em;
   }
   
   .messageIcon {
